fix overflow bug for Menu

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@ body {
     Roboto, Helvetica, Arial, sans-serif;
   font-size: 12px;
   line-height: 1em;
+  overflow-x: hidden;
 }
 
 #main {
